--- a/arch/arm64/configs/hardrock_oxygen_defconfig
+++ b/arch/arm64/configs/hardrock_oxygen_defconfig
@@ -4068,7 +4068,12 @@ CONFIG_EXFAT_SUPPORT_STLOG=y
 CONFIG_NTFS_FS=y
 CONFIG_NTFS_DEBUG=y
 CONFIG_NTFS_RW=y
-
+# sdFAT Support
+CONFIG_SDCARD_FS=y                      
+CONFIG_VFAT_FS=y                        
+CONFIG_FAT_DEFAULT_IOCHARSET="utf8"    
+CONFIG_SDFAT_SUPPORT_DIR_SYNC=y         
+CONFIG_SDFAT_CHECK_RO_ATTR=y 
 # CONFIG_NTFS_FS is not set
 
 #
