--- a/arch/arm64/configs/hardrock-pie_defconfig
+++ b/arch/arm64/configs/hardrock-pie_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 3.18.71 Kernel Configuration
+# Linux/arm64 3.18.129 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -221,6 +221,7 @@ CONFIG_HAVE_DMA_CONTIGUOUS=y
 CONFIG_GENERIC_SMP_IDLE_THREAD=y
 CONFIG_HAVE_CLK=y
 CONFIG_HAVE_DMA_API_DEBUG=y
+CONFIG_HAVE_HW_BREAKPOINT=y
 CONFIG_HAVE_PERF_REGS=y
 CONFIG_HAVE_PERF_USER_STACK_DUMP=y
 CONFIG_HAVE_ARCH_JUMP_LABEL=y
@@ -296,11 +297,8 @@ CONFIG_IOSCHED_NOOP=y
 # CONFIG_IOSCHED_TEST is not set
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_CFQ=y
-CONFIG_IOSCHED_BFQ=y
-CONFIG_CGROUP_BFQIO=y
 # CONFIG_DEFAULT_DEADLINE is not set
 # CONFIG_DEFAULT_CFQ is not set
-# CONFIG_DEFAULT_BFQ is not set
 CONFIG_DEFAULT_NOOP=y
 CONFIG_DEFAULT_IOSCHED="noop"
 CONFIG_ASN1=y
@@ -1102,10 +1100,6 @@ CONFIG_CMA_ALIGNMENT=8
 # CONFIG_MTD is not set
 CONFIG_DTC=y
 CONFIG_OF=y
-
-#
-# Device Tree and Open Firmware support
-#
 # CONFIG_OF_UNITTEST is not set
 CONFIG_OF_FLATTREE=y
 CONFIG_OF_EARLY_FLATTREE=y
@@ -1182,12 +1176,10 @@ CONFIG_UID_STAT=y
 CONFIG_QSEECOM=y
 CONFIG_HDCP_QSEECOM=y
 # CONFIG_PROFILER is not set
-CONFIG_UID_SYS_STATS=y
 CONFIG_USB_EXT_TYPE_C_PERICOM=y
 # CONFIG_USB_EXT_TYPE_C_TI is not set
 # CONFIG_TI_DRV2667 is not set
 # CONFIG_QPNP_MISC is not set
-# CONFIG_UID_SYS_STATS_DEBUG is not set
 # CONFIG_MEMORY_STATE_TIME is not set
 # CONFIG_C2PORT is not set
 
@@ -1833,6 +1825,8 @@ CONFIG_TOUCHSCREEN_FT5X06=y
 # CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI4 is not set
 # CONFIG_TOUCHSCREEN_GT9XX is not set
 CONFIG_TOUCHSCREEN_MAXIM_STI=y
+# CONFIG_TOUCHSCREEN_FTS is not set
+# CONFIG_TOUCHSCREEN_HIMAX_CHIPSET is not set
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
 # CONFIG_INPUT_BMA150 is not set
@@ -1847,6 +1841,7 @@ CONFIG_INPUT_HBTP_INPUT=y
 # CONFIG_INPUT_GPIO_TILT_POLLED is not set
 # CONFIG_INPUT_ATI_REMOTE2 is not set
 CONFIG_INPUT_KEYCHORD=y
+# CONFIG_STMVL53L0X is not set
 # CONFIG_INPUT_KEYSPAN_REMOTE is not set
 # CONFIG_INPUT_KXTJ9 is not set
 # CONFIG_INPUT_POWERMATE is not set
@@ -1869,6 +1864,17 @@ CONFIG_INPUT_GPIO=y
 CONFIG_INPUT_FINGERPRINT=y
 CONFIG_FINGERPRINT_GOODIX_TA=y
 CONFIG_FINGERPRINT_FPC_TEE=y
+# CONFIG_BOSCH_DRIVER_LOG_FUNC is not set
+# CONFIG_SENSORS_SMI_ACC2X2 is not set
+# CONFIG_SENSORS_SMI_GYRO is not set
+# CONFIG_SENSORS_YAS537 is not set
+# CONFIG_SENSORS_BMM050 is not set
+# CONFIG_SENSORS_AKM09911 is not set
+# CONFIG_SENSORS_AKM09912 is not set
+# CONFIG_SENSORS_SMI_ACC420 is not set
+# CONFIG_SENSORS_SMI_ACC421 is not set
+# CONFIG_SENSORS_SMI_ACC422 is not set
+# CONFIG_SENSORS_SMI_ACC455 is not set
 
 #
 # Hardware I/O ports
@@ -2845,6 +2851,7 @@ CONFIG_FB_MSM_MDSS=y
 CONFIG_FB_MSM_MDSS_WRITEBACK=y
 CONFIG_FB_MSM_MDSS_HDMI_PANEL=y
 # CONFIG_FB_MSM_MDSS_HDMI_MHL_SII8334 is not set
+# CONFIG_FB_MSM_MDSS_SPI_PANEL is not set
 # CONFIG_FB_MSM_MDSS_MHL3 is not set
 # CONFIG_FB_MSM_MDSS_DSI_CTRL_STATUS is not set
 # CONFIG_FB_MSM_MDSS_EDP_PANEL is not set
@@ -2994,6 +3001,7 @@ CONFIG_DTS_EAGLE=y
 CONFIG_DTS_SRS_TM=y
 CONFIG_QTI_PP=y
 CONFIG_SND_SOC_CPE=y
+# CONFIG_SND_SOC_MSM8996_VM is not set
 CONFIG_SND_SOC_MSM8X16=y
 CONFIG_SND_SOC_I2C_AND_SPI=y
 
@@ -3473,6 +3481,7 @@ CONFIG_LEDS_CLASS=y
 # CONFIG_LEDS_LP8501 is not set
 # CONFIG_LEDS_PCA955X is not set
 # CONFIG_LEDS_PCA963X is not set
+# CONFIG_LEDS_PCA9956B is not set
 # CONFIG_LEDS_DAC124S085 is not set
 # CONFIG_LEDS_PWM is not set
 # CONFIG_LEDS_REGULATOR is not set
@@ -3681,6 +3690,7 @@ CONFIG_STAGING=y
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
+# CONFIG_ANDROID_BINDER_IPC_SELFTEST is not set
 CONFIG_ASHMEM=y
 # CONFIG_ANDROID_LOGGER is not set
 CONFIG_ANDROID_TIMED_OUTPUT=y
@@ -3692,6 +3702,7 @@ CONFIG_SW_SYNC=y
 CONFIG_SW_SYNC_USER=y
 CONFIG_ONESHOT_SYNC=y
 # CONFIG_ONESHOT_SYNC_USER is not set
+# CONFIG_ANDROID_VSOC is not set
 CONFIG_ION=y
 # CONFIG_ION_TEST is not set
 # CONFIG_ION_DUMMY is not set
@@ -3704,21 +3715,6 @@ CONFIG_ION_MSM=y
 # CONFIG_DGNC is not set
 # CONFIG_DGAP is not set
 # CONFIG_GS_FPGABOOT is not set
-
-#
-# Qualcomm Atheros Prima WLAN module
-#
-# CONFIG_PRIMA_WLAN is not set
-CONFIG_PRONTO_WLAN=y
-# CONFIG_PRIMA_WLAN_BTAMP is not set
-CONFIG_PRIMA_WLAN_LFR=y
-CONFIG_PRIMA_WLAN_OKC=y
-CONFIG_PRIMA_WLAN_11AC_HIGH_TP=y
-CONFIG_WLAN_FEATURE_11W=y
-CONFIG_QCOM_VOWIFI_11R=y
-CONFIG_ENABLE_LINUX_REG=y
-CONFIG_WLAN_OFFLOAD_PACKETS=y
-CONFIG_QCOM_TDLS=y
 # CONFIG_GOLDFISH is not set
 
 #
@@ -3741,7 +3737,6 @@ CONFIG_IPA=y
 # CONFIG_IPA3 is not set
 # CONFIG_GSI is not set
 CONFIG_RMNET_IPA=y
-# CONFIG_SSM is not set
 # CONFIG_MSM_MHI is not set
 # CONFIG_PFT is not set
 # CONFIG_I2C_MSM_PROF_DBG is not set
@@ -3878,6 +3873,7 @@ CONFIG_MSM_EVENT_TIMER=y
 # CONFIG_MSM_IPC_ROUTER_GLINK_XPRT is not set
 # CONFIG_MSM_SYSTEM_HEALTH_MONITOR is not set
 # CONFIG_MSM_GLINK_PKT is not set
+# CONFIG_MSM_BGRSB is not set
 CONFIG_MSM_TZ_SMMU=y
 CONFIG_MSM_SUBSYSTEM_RESTART=y
 CONFIG_MSM_SYSMON_COMM=y
@@ -3902,6 +3898,7 @@ CONFIG_MSM_KERNEL_PROTECT_MPU=y
 # CONFIG_MSM_REMOTEQDSS is not set
 # CONFIG_QCOM_SMCINVOKE is not set
 # CONFIG_QCOM_EARLY_RANDOM is not set
+# CONFIG_MSM_BG_GLINK is not set
 # CONFIG_WCD_DSP_GLINK is not set
 CONFIG_SERIAL_NUM=y
 CONFIG_MEM_SHARE_QMI_SERVICE=y
@@ -4380,6 +4377,7 @@ CONFIG_DEBUG_RODATA=y
 # Security options
 #
 CONFIG_KEYS=y
+CONFIG_KEYS_COMPAT=y
 # CONFIG_PERSISTENT_KEYRINGS is not set
 # CONFIG_BIG_KEYS is not set
 CONFIG_ENCRYPTED_KEYS=y
@@ -4511,6 +4509,8 @@ CONFIG_CRYPTO_DES=y
 # CONFIG_CRYPTO_SALSA20 is not set
 # CONFIG_CRYPTO_SEED is not set
 # CONFIG_CRYPTO_SERPENT is not set
+# CONFIG_CRYPTO_SPECK is not set
+# CONFIG_CRYPTO_SPECK_NEON is not set
 # CONFIG_CRYPTO_TEA is not set
 CONFIG_CRYPTO_TWOFISH=y
 CONFIG_CRYPTO_TWOFISH_COMMON=y
